--- a/home.html
+++ b/home.html
@@ -241,7 +241,7 @@
       <ul id="navLinks">
         <li><a class="active" href="home.html">Home</a></li>
         <li><a  href="skill.html">Skill</a></li>
-         <li><a href="index.html">Market</a></li>
+         <li><a href="market.html">Market</a></li>
         <li><a href="community.html">Community</a></li>
       </ul>
       <div class="hamburger" onclick="toggleMenu()">
