fixing the error

--- a/market.html
+++ b/market.html
@@ -394,134 +394,78 @@
     function toggleForm(id) {
       const form = document.getElementById(id);
       form.style.display = form.style.display === "block" ? "none" : "block";
-    }
 
-    function getProducts() {
-      return JSON.parse(localStorage.getItem("products")) || [];
-    }
 
-    function getRecipes() {
-      return JSON.parse(localStorage.getItem("recipes")) || [];
     }
+ </script>
+ <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js";
+  import { getFirestore, collection, addDoc, getDocs } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-firestore.js";
+  import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.10.0/firebase-auth.js";
 
-    function getCart() {
-      return JSON.parse(localStorage.getItem("cart")) || [];
+  const firebaseConfig = {
+    apiKey: "AIzaSyDmVCNtXOn4hIC3cERam4PUrTYSLKYjwc0",
+    authDomain: "matricodeauth.firebaseapp.com",
+    projectId: "matricodeauth",
+    storageBucket: "matricodeauth.firebasestorage.app",
+    messagingSenderId: "90165101312",
+    appId: "1:90165101312:web:aac8312f717ffc195569e5"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const db = getFirestore(app);
+  const auth = getAuth(app);
+
+  onAuthStateChanged(auth, user => {
+    if (!user) window.location.href = "login.html";
+    else {
+      displayItems("products", "productList", "product");
+      displayItems("recipes", "recipeList", "recipe");
     }
+  });
 
-    function saveProducts(products) {
-      localStorage.setItem("products", JSON.stringify(products));
-    }
-
-    function saveRecipes(recipes) {
-      localStorage.setItem("recipes", JSON.stringify(recipes));
-    }
-
-    function saveCart(cart) {
-      localStorage.setItem("cart", JSON.stringify(cart));
-    }
-
-    document.getElementById("productForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const name = document.getElementById("productName").value;
-      const price = parseFloat(document.getElementById("productPrice").value);
-      const image = document.getElementById("productImage").value;
-      const product = { id: Date.now(), name, price, image };
-      const products = getProducts();
-      products.push(product);
-      saveProducts(products);
-      displayProducts();
-      this.reset();
-      this.style.display = "none";
+  document.getElementById("productForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
+    await addDoc(collection(db, "products"), {
+      name: productName.value,
+      price: +productPrice.value,
+      image: productImage.value
     });
+    e.target.reset();
+    e.target.style.display = "none";
+    displayItems("products", "productList", "product");
+  });
 
-    document.getElementById("recipeForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-      const name = document.getElementById("recipeName").value;
-      const ingredients = document.getElementById("recipeIngredients").value;
-      const price = parseFloat(document.getElementById("recipePrice").value);
-      const image = document.getElementById("recipeImage").value;
-      const recipe = { id: Date.now(), name, ingredients, price, image };
-      const recipes = getRecipes();
-      recipes.push(recipe);
-      saveRecipes(recipes);
-      displayRecipes();
-      this.reset();
-      this.style.display = "none";
+  document.getElementById("recipeForm").addEventListener("submit", async (e) => {
+    e.preventDefault();
+    await addDoc(collection(db, "recipes"), {
+      name: recipeName.value,
+      ingredients: recipeIngredients.value,
+      price: +recipePrice.value,
+      image: recipeImage.value
     });
+    e.target.reset();
+    e.target.style.display = "none";
+    displayItems("recipes", "recipeList", "recipe");
+  });
 
-    function displayProducts() {
-      const products = getProducts();
-      const container = document.getElementById("productList");
-      container.innerHTML = "";
-      products.forEach(product => {
-        const div = document.createElement("div");
-        div.classList.add("product");
-        div.innerHTML = `
-          <img src="${product.image}" alt="${product.name}">
-          <h3>${product.name}</h3>
-          <p>Rs. ${product.price.toFixed(2)}</p>
-          <button onclick="addToCart(${product.id}, 'product')">Add to Cart</button>
-        `;
-        container.appendChild(div);
-      });
-    }
+  async function displayItems(type, containerId, btnType) {
+    const querySnapshot = await getDocs(collection(db, type));
+    const container = document.getElementById(containerId);
+    container.innerHTML = "";
+    querySnapshot.forEach(doc => {
+      const data = doc.data();
+      container.innerHTML += `
+        <div class="product">
+          <img src="${data.image}" alt="${data.name}">
+          <h3>${data.name}</h3>
+          ${data.ingredients ? `<p><strong>Ingredients:</strong> ${data.ingredients}</p>` : ""}
+          <p>Rs. ${data.price.toFixed(2)}</p>
+          <button onclick="alert('Added to cart!')">Add to Cart</button>
+        </div>`;
+    });
+  }
+</script>
 
-    function displayRecipes() {
-      const recipes = getRecipes();
-      const container = document.getElementById("recipeList");
-      container.innerHTML = "";
-      recipes.forEach(recipe => {
-        const div = document.createElement("div");
-        div.classList.add("product");
-        div.innerHTML = `
-          <img src="${recipe.image}" alt="${recipe.name}">
-          <h3>${recipe.name}</h3>
-          <p><strong>Ingredients:</strong> ${recipe.ingredients}</p>
-          <p>Rs. ${recipe.price.toFixed(2)}</p>
-          <button onclick="addToCart(${recipe.id}, 'recipe')">Add to Cart</button>
-        `;
-        container.appendChild(div);
-      });
-    }
-
-    function addToCart(id, type) {
-      let cart = getCart();
-      const item = type === 'product' 
-        ? getProducts().find(p => p.id === id)
-        : getRecipes().find(r => r.id === id);
-      const existing = cart.find(i => i.id === id && i.type === type);
-      if (existing) {
-        existing.quantity++;
-      } else {
-        cart.push({ ...item, quantity: 1, type });
-      }
-      saveCart(cart);
-      updateCartCount();
-    }
-
-    function updateCartCount() {
-      const cart = getCart();
-      const count = cart.reduce((sum, item) => sum + item.quantity, 0);
-      document.getElementById("cartCount").textContent = count;
-    }
-
-    function filterItems() {
-      const query = document.getElementById("searchInput").value.toLowerCase();
-      document.querySelectorAll(".products .product").forEach(item => {
-        item.style.display = item.textContent.toLowerCase().includes(query) ? "block" : "none";
-      });
-    }
-
-//     function clearform()
-// {
-//   localStorage.removeItem("recipes");
-
-// }  
-// clearform(); 
- // Initial Load
-    displayProducts();
-    displayRecipes();
-    updateCartCount();
-  </script>
 </body>
 </html>
